update shpinx extension versions

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,8 +6,8 @@ pyyaml
 tqdm
 appdirs>=1.4.4
 sphinx==5.2.3
-sphinx-design==0.0.13
-sphinx_rtd_theme==0.5.2
+sphinx-design
+sphinx_rtd_theme
 sphinx-gallery
 matplotlib
 networkx
