--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,9 +6,9 @@ pyyaml
 tqdm
 appdirs>=1.4.4
 sphinx==5.2.3
-sphinx-design
-sphinx_rtd_theme
-sphinx-gallery
+sphinx-design==0.3.0
+sphinx_rtd_theme==1.0.0
+sphinx-gallery==0.11.1
 matplotlib
 networkx
 scikit-learn
