--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,25 +1,17 @@
 version: 2
 
-# Default
-formats: []
-
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-20.04
   tools:
-    python: "3.9"
-    # You can also specify other tool versions:
-    # nodejs: "16"
-    # rust: "1.55"
-    # golang: "1.17"
+    python: "3.7"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
 
-# If using Sphinx, optionally build your docs in additional formats such as PDF
-# formats:
-#    - pdf
+# If using Sphinx, do not build your docs in additional formats
+formats: []
 
 # Optionally declare the Python requirements required to build your docs
 python:
