--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,8 @@ build:
   os: ubuntu-20.04
   tools:
     python: "3.7"
+  apt_packages:
+    - python3.7-dev
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
