Add codecov report

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,3 +38,8 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Upload to codecov
+      run: |
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov
