--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -90,7 +90,7 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             python -m pip install flake8 pytest-cov
-            if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
+            if exist tests\requirements.txt (pip install -r tests\requirements.txt)
         - name: Lint with flake8
           run: |
             # stop the build if there are Python syntax errors or undefined names
