--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  linux:
 
     runs-on: ubuntu-latest
     strategy:
@@ -40,3 +40,65 @@ jobs:
         pytest --cov=./ --cov-report=xml
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
+
+  macos:
+
+    runs-on: macos-latest
+      strategy:
+        fail-fast: false
+        matrix:
+          python-version: [ "3.7", "3.8", "3.9" ]
+
+      steps:
+        - uses: actions/checkout@v2
+        - name: Set up Python ${{ matrix.python-version }}
+          uses: actions/setup-python@v2
+          with:
+            python-version: ${{ matrix.python-version }}
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            python -m pip install flake8 pytest-cov
+            if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
+        - name: Lint with flake8
+          run: |
+            # stop the build if there are Python syntax errors or undefined names
+            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+            # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        - name: Test with pytest
+          run: |
+            pytest --cov=./ --cov-report=xml
+        - name: Upload to codecov
+          uses: codecov/codecov-action@v3
+
+    windows:
+
+      runs-on: windows-latest
+      strategy:
+        fail-fast: false
+        matrix:
+          python-version: [ "3.7", "3.8", "3.9" ]
+
+        steps:
+          - uses: actions/checkout@v2
+          - name: Set up Python ${{ matrix.python-version }}
+            uses: actions/setup-python@v2
+            with:
+              python-version: ${{ matrix.python-version }}
+          - name: Install dependencies
+            run: |
+              python -m pip install --upgrade pip
+              python -m pip install flake8 pytest-cov
+              if exist tests\requirements.txt (pip install -r tests\requirements.txt)
+          - name: Lint with flake8
+            run: |
+              # stop the build if there are Python syntax errors or undefined names
+              flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+              # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+              flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          - name: Test with pytest
+            run: |
+              pytest --cov=./ --cov-report=xml
+          - name: Upload to codecov
+            uses: codecov/codecov-action@v3
