--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
-          if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
+          pip install -r tests/requirements.txt
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
@@ -68,7 +68,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest --cov=./ --cov-report=xml
+          pytest --cov=pygmtools --cov-report=xml
       - name: Upload to codecov
         uses: codecov/codecov-action@v3
 
@@ -90,7 +90,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
-          if exist tests\requirements.txt (pip install -r tests\requirements.txt)
+          pip install -r tests\requirements.txt
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
@@ -99,6 +99,6 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest --cov=./ --cov-report=xml
+          pytest --cov=pygmtools --cov-report=xml
       - name: Upload to codecov
         uses: codecov/codecov-action@v3
