--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -59,6 +59,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
+          git clone https://github.com/openmp/libomp
+          cd libomp
+          ./build.sh
+          cd ..
           pip install -r tests/requirements.txt
       - name: Lint with flake8
         run: |
