--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
-          brew install libomp
+          brew install clang-omp
           pip install -r tests/requirements.txt
       - name: Lint with flake8
         run: |
