--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,8 +57,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          brew install python@3.7 onednn
-          brew reinstall -v libomp --prefix=/usr/local/lib/libomp
+          brew update
+          brew install libomp --prefix=/usr/local/lib/libomp
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
           pip install -r tests/requirements.txt
