--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,8 +57,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          brew update
-          brew install libomp --prefix=/usr/local/lib/libomp
+          brew --prefix libomp
+          brew install libomp --prefix=/usr/local/lib
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
           pip install -r tests/requirements.txt
