--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,8 +57,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          brew reinstall libomp
           brew --prefix libomp
-          export LIBRARY_PATH=/usr/local/opt/libomp/15.0.6/lib/
+          ln -s /usr/local/opt/libomp /usr/local/bin/libomp
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
           pip install -r tests/requirements.txt
