--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           brew reinstall libomp
           brew --prefix libomp
-          ln -s /usr/local/opt/libomp /usr/local/bin/libomp
+          export LIBRARY_PATH=/usr/local/opt
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
           pip install -r tests/requirements.txt
