--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -93,7 +93,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
-          python -m pip install -r tests\requirements.txt
+          python -m pip install --encoding=utf-8 -r tests\requirements.txt
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
