--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,12 +57,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          brew reinstall libomp
-          brew --prefix libomp
-          export LIBRARY_PATH=/usr/local/opt
+#          brew reinstall libomp
+#          brew --prefix libomp
+#          export LIBRARY_PATH=/usr/local/opt
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
-          pip install -r tests/requirements.txt
+          pip install -r tests/requirements_win.txt
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
