--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,8 +37,9 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        python -c "import mindspore"
-        pytest --cov=pygmtools --cov-report=xml
+#        python -c "import mindspore"
+        python tests/test_classic_solvers.py
+#        pytest --cov=pygmtools --cov-report=xml
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
 
