--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,7 +37,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        python tests/test1.py
+        python pygmtools/test1.py
         pytest --cov=pygmtools --cov-report=xml
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
