--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Test with pytest
       run: |
         python tests/test1.py
-        pytest --cov=pygmtools --cov-report=xml
+        pytest
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
 
