--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     container:
-      options: --memory=16G
+      options: --memory=16g
     strategy:
       fail-fast: false
       matrix:
