--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,6 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     container:
+      image: docker://ubuntu:latest
       options: --memory=16g
     strategy:
       fail-fast: false
