--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,6 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9"]
+        memory: ["32GB"]
 
     steps:
     - uses: actions/checkout@v2
