--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,11 +13,13 @@ jobs:
   linux:
 
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:latest
+      options: --memory=32g
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9"]
-        memory: ["32GB"]
 
     steps:
     - uses: actions/checkout@v2
@@ -77,7 +79,6 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [ "3.8" ]
-        memory: ["32GB"]
 
     steps:
       - uses: actions/checkout@v2
@@ -99,3 +100,4 @@ jobs:
       - name: Test with pytest
         run: |
           pytest --cov=pygmtools --cov-report=xml tests/test_mindspore_classic_solvers.py
+        ram: '16 GB'
