--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        pytest --cov=pygmtools --cov-report=xml tests/test_mindspore_classic_solvers.py
         pytest --cov=pygmtools --cov-report=xml --ignore=tests/test_mindspore_classic_solvers.py
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
@@ -68,6 +69,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
+          pytest --cov=pygmtools --cov-report=xml tests/test_mindspore_classic_solvers.py
           pytest --cov=pygmtools --cov-report=xml --ignore=tests/test_mindspore_classic_solvers.py
   windows:
 
@@ -96,4 +98,5 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
+          pytest --cov=pygmtools --cov-report=xml tests/test_mindspore_classic_solvers.py
           pytest --cov=pygmtools --cov-report=xml --ignore=tests/test_mindspore_classic_solvers.py
