--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,8 +37,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --cov=pygmtools --cov-report=xml tests/test_mindspore_classic_solvers.py
-        pytest --cov=pygmtools --cov-report=xml --ignore=tests/test_mindspore_classic_solvers.py
+        pytest --cov=pygmtools --cov-report=xml --backend=mindspore
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
 
@@ -69,8 +68,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest --cov=pygmtools --cov-report=xml tests/test_mindspore_classic_solvers.py
-          pytest --cov=pygmtools --cov-report=xml --ignore=tests/test_mindspore_classic_solvers.py
+          pytest --cov=pygmtools --cov-report=xml --backend=mindspore
   windows:
 
     runs-on: windows-latest
@@ -98,5 +96,4 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest --cov=pygmtools --cov-report=xml tests/test_mindspore_classic_solvers.py
-          pytest --cov=pygmtools --cov-report=xml --ignore=tests/test_mindspore_classic_solvers.py
+          pytest --cov=pygmtools --cov-report=xml --backend=mindspore
