--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest-cov
         if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
-        if [ "${{ matrix.python-version }}" != "3.10" ]; then pip install mindspore
+        if [ "${{ matrix.python-version }}" != "3.10" ]; then pip install mindspore==1.10.0
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -38,8 +38,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        if [ "${{ matrix.python-version }}" != "3.10" ]; then
-          pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py
+        if [ "${{ matrix.python-version }}" != "3.10" ]; then pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py
         pytest --cov=pygmtools --cov-report=xml --cov-append
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
