--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest-cov
         if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
+        if [ "${{ matrix.python-version }}" != "3.10" ]; then pip install mindspore==1.10.0; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -37,9 +38,12 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --cov=pygmtools --cov-report=xml
+        if [ "${{ matrix.python-version }}" != "3.10" ]; then 
+          pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py; fi
+        pytest --cov=pygmtools --cov-report=xml --cov-append
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
+      if: matrix.python-version == 3.8
 
   macos:
 
@@ -68,8 +72,8 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest --cov=pygmtools --cov-report=xml
-
+          pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py
+          pytest --cov=pygmtools --cov-report=xml --cov-append
   windows:
 
     runs-on: windows-latest
@@ -97,4 +101,5 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest --cov=pygmtools --cov-report=xml
+          pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py
+          pytest --cov=pygmtools --cov-report=xml --cov-append
