--- a/tests/requirements_win_mac.txt
+++ b/tests/requirements_win_mac.txt
@@ -1,6 +1,6 @@
 requests>=2.25.1
 scipy>=1.4.1
-Pillow>=7.2.0
+Pillow==9.2.0
 numpy>=1.18.5
 easydict>=1.7
 paddlepaddle==2.4.1
@@ -9,5 +9,5 @@ torch
 tqdm
 appdirs>=1.4.4
 tensorflow==2.9.3
-mindspore==1.10.1
+mindspore==1.10.0
 wget
