--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,9 +30,9 @@ jobs:
         python -m pip install flake8 pytest-cov
         if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
         if [ "${{ matrix.python-version }}" != "3.10" ]; then pip install mindspore==1.10.0; fi
-    - name: preparation for tests
+    - name: generate astar.so
       run: |
-        python tests/test_a_star/prepare_for_test.py
+        python pygmtools/astar/get_astar.py
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -67,9 +67,9 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
           pip install -r tests/requirements_win_mac.txt
-      - name: preparation for tests
+      - name: generate astar.so
         run: |
-          python tests/test_a_star/prepare_for_test.py
+          python pygmtools/astar/get_astar.py
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
@@ -99,9 +99,9 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov
           python -m pip install -r tests\requirements_win_mac.txt
-      - name: preparation for tests
+      - name: generate astar.pyd
         run: |
-          python tests/test_a_star/prepare_for_test.py
+          python pygmtools/astar/get_astar.py
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
