--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,10 @@ sphinx:
 # If using Sphinx, do not build your docs in additional formats
 formats: []
 
+# Set the OS
+build:
+  os: ubuntu-20.04
+
 # Optionally declare the Python requirements required to build your docs
 python:
   version: "3.8"
