--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,8 @@ formats: []
 # Set the OS
 build:
   os: ubuntu-20.04
+  tools:
+    python: "3.8"
 
 # Optionally declare the Python requirements required to build your docs
 python:
