--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r docs/publish_req.txt
+        pip install -r pygmtools/publish_requirements.txt
     - name: Build Wheel
       run: |
         python setup.py bdist_wheel
@@ -85,7 +85,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r docs/publish_req.txt
+          pip install -r pygmtools/publish_requirements.txt
       - name: Build Wheel
         run: |
           python setup.py bdist_wheel
@@ -114,7 +114,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r docs/publish_req.txt
+          pip install -r pygmtools/publish_requirements.txt
       - name: Build Wheel
         run: |
           python setup.py bdist_wheel
