--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -27,6 +27,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install wheel
         pip install cython
+        pip install setuptools
     - name: Build package
       run: python setup.py sdist
     - name: Upload new version to PyPI
