--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -46,7 +46,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
-        os: [ ubuntu-20.04, windows-2022, macos-12, macos-13-arm64 ]
+        os: [ ubuntu-20.04, windows-latest, macos-latest ]
 
     runs-on: ${{ matrix.os }}
 
